--- a/package.json
+++ b/package.json
@@ -2,5 +2,15 @@
   "name": "api",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "express": "4.17.2"
+  },
+  "devDependencies": {
+    "dotenv": "10.0.0",
+    "module-alias": "2.2.2",
+    "nodemon": "2.0.15",
+    "sucrase": "3.20.3",
+    "ts-jest": "27.1.2"
+  }
 }
