--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "express": "4.17.2"
   },
   "devDependencies": {
+    "@types/express": "4.17.13",
+    "@types/module-alias": "2.0.1",
     "dotenv": "10.0.0",
     "module-alias": "2.2.2",
     "nodemon": "2.0.15",
