--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "node dist/src/index.js",
+    "dev": "nodemon --exec sucrase-node src/index.ts",
+    "build": "tsc",
+    "typecheck": "tsc --project tsconfig.json --noEmit",
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
   "dependencies": {
     "express": "4.17.2"
   },
