--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon --exec sucrase-node src/index.ts",
     "build": "tsc",
     "typecheck": "tsc --project tsconfig.json --noEmit",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "test:watch": "jest --watch"
   },
   "dependencies": {
@@ -21,6 +21,7 @@
     "module-alias": "2.2.2",
     "nodemon": "2.0.15",
     "sucrase": "3.20.3",
-    "ts-jest": "27.1.2"
+    "ts-jest": "27.1.2",
+    "typescript": "4.5.4"
   }
 }
