--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "test:ci": "jest --passWithNoTests --ci --watchAll=false"
   },
   "dependencies": {
     "express": "4.17.2"
@@ -18,6 +19,7 @@
     "@types/express": "4.17.13",
     "@types/module-alias": "2.0.1",
     "dotenv": "10.0.0",
+    "jest": "27.4.7",
     "module-alias": "2.2.2",
     "nodemon": "2.0.15",
     "sucrase": "3.20.3",
