--- a/package.json
+++ b/package.json
@@ -18,10 +18,20 @@
   "devDependencies": {
     "@types/express": "4.17.13",
     "@types/module-alias": "2.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "dotenv": "10.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "4.0.0",
+    "eslint-plugin-promise": "^5.2.0",
     "jest": "27.4.7",
     "module-alias": "2.2.2",
     "nodemon": "2.0.15",
+    "prettier": "2.5.1",
     "sucrase": "3.20.3",
     "ts-jest": "27.1.2",
     "typescript": "4.5.4"
