--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
-    "test:ci": "jest --passWithNoTests --ci --watchAll=false"
+    "test:ci": "jest --passWithNoTests --ci --watchAll=false",
+    "prettier:write": "prettier --write 'src/**/**.{js,jsx,ts,tsx,json,css,less,md}'",
+    "prettier:check": "prettier -c  'src/**/**.{js,jsx,ts,tsx,json,css,less,md}'",
+    "lint": "eslint 'src/**/**.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
     "express": "4.17.2"
