--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "api",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "0.0.1",
+  "main": "index.ts",
   "license": "MIT",
   "scripts": {
     "start": "node dist/src/index.js",
@@ -31,12 +31,27 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "^5.2.0",
+    "husky": "7.0.4",
     "jest": "27.4.7",
+    "lint-staged": "12.1.7",
     "module-alias": "2.2.2",
     "nodemon": "2.0.15",
     "prettier": "2.5.1",
     "sucrase": "3.20.3",
     "ts-jest": "27.1.2",
     "typescript": "4.5.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/**.{js,jsx,ts,tsx}": [
+      "eslint"
+    ],
+    "src/**/**.{js,jsx,ts,tsx,json,css,less,md}": [
+      "prettier --write"
+    ]
   }
 }
