--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "lint": "eslint 'src/**/**.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.17.2"
   },
   "devDependencies": {
+    "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/module-alias": "2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
