--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
   },
   "dependencies": {
     "cors": "2.8.5",
-    "express": "4.17.2"
+    "express": "4.17.2",
+    "pg": "8.7.1",
+    "typeorm": "0.2.41"
   },
   "devDependencies": {
     "@types/cors": "2.8.12",
