--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,22 @@
 {
   "compilerOptions": {
-    "target": "esnext",                                  
-    "module": "commonjs",   
+    "target": "esnext",
+    "module": "commonjs",
     "outDir": "./dist",
-    "rootDir": "./",                             
-    "esModuleInterop": true,                             
-    "forceConsistentCasingInFileNames": true,            
-    "strict": true,                                      
+    "rootDir": "./",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
     "skipLibCheck": true,
     "baseUrl": ".",
     "noImplicitAny": true,
     "paths": {
-      "@/*": ["./src/*"]
-    }                          
+      "@/*": [
+        "./src/*"
+      ]
+    },
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false
   },
   "exclude": [
     "node_modules",
