Added migrations to create extension and create users

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,7 @@
     "indent": "off",
     "camelcase": "off",
     "multiline-ternary": "off",
+    "brace-style": "off",
     "comma-dangle": [
       "error",
       {
