--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
     "test:ci": "jest --passWithNoTests --ci --watchAll=false",
-    "prettier:write": "prettier --write 'src/**/**.{js,jsx,ts,tsx,json,css,less,md}'",
-    "prettier:check": "prettier -c  'src/**/**.{js,jsx,ts,tsx,json,css,less,md}'",
-    "lint": "eslint 'src/**/**.{js,jsx,ts,tsx}'",
+    "prettier:write": "prettier --write 'src/**/**.{js,ts,json,md}'",
+    "prettier:check": "prettier -c  'src/**/**.{js,ts,json,md}'",
+    "lint": "eslint 'src/**/**.{js,ts}'",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
