Added HashProvider and user routers

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       ]
     },
     "experimentalDecorators": true,
-    "strictPropertyInitialization": false
+    "strictPropertyInitialization": false,
+    "emitDecoratorMetadata": true
   },
   "exclude": [
     "node_modules",
