--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "main": "index.ts",
   "license": "MIT",
   "scripts": {
-    "start": "node dist/src/index.js",
-    "dev": "nodemon --exec sucrase-node src/index.ts",
-    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --respawn --ignore-watch node_modules src/index.ts",
+    "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
     "typecheck": "tsc --project tsconfig.json --noEmit",
     "test": "jest --passWithNoTests",
     "test:watch": "jest --watch",
@@ -17,20 +17,34 @@
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "bcryptjs": "2.4.3",
     "class-transformer": "0.5.1",
     "cors": "2.8.5",
     "express": "4.17.2",
+    "express-async-errors": "3.1.1",
     "pg": "8.7.1",
+    "reflect-metadata": "0.1.13",
     "ts-node-dev": "1.1.8",
     "tsyringe": "4.6.0",
-    "typeorm": "0.2.41"
+    "typeorm": "0.2.41",
+    "yup": "0.32.11"
   },
   "devDependencies": {
+    "@babel/cli": "7.10.4",
+    "@babel/core": "7.10.4",
+    "@babel/plugin-proposal-class-properties": "7.10.4",
+    "@babel/plugin-proposal-decorators": "7.10.4",
+    "@babel/preset-env": "7.10.4",
+    "@babel/preset-typescript": "7.10.4",
+    "@types/bcryptjs": "2.4.2",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/module-alias": "2.0.1",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
+    "babel-plugin-root-import": "6.6.0",
+    "babel-plugin-transform-decorators": "6.24.1",
+    "babel-plugin-transform-typescript-metadata": "0.3.0",
     "dotenv": "10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "8.3.0",
@@ -43,10 +57,9 @@
     "jest": "27.4.7",
     "lint-staged": "12.1.7",
     "module-alias": "2.2.2",
-    "nodemon": "2.0.15",
     "prettier": "2.5.1",
-    "sucrase": "3.20.3",
     "ts-jest": "27.1.2",
+    "tsconfig-paths": "3.12.0",
     "typescript": "4.5.4"
   },
   "husky": {
