--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@types/bcryptjs": "2.4.2",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
+    "@types/jest": "27.4.0",
     "@types/module-alias": "2.0.1",
+    "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "babel-plugin-root-import": "6.6.0",
@@ -53,6 +55,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "^5.2.0",
+    "faker-br": "0.4.1",
+    "fishery": "2.1.0",
     "husky": "4",
     "jest": "27.4.7",
     "lint-staged": "12.1.7",
@@ -60,7 +64,8 @@
     "prettier": "2.5.1",
     "ts-jest": "27.1.2",
     "tsconfig-paths": "3.12.0",
-    "typescript": "4.5.4"
+    "typescript": "4.5.4",
+    "uuid": "8.3.2"
   },
   "husky": {
     "hooks": {
