--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "2.8.5",
     "express": "4.17.2",
     "express-async-errors": "3.1.1",
+    "jsonwebtoken": "8.5.1",
     "pg": "8.7.1",
     "reflect-metadata": "0.1.13",
     "ts-node-dev": "1.1.8",
@@ -40,6 +41,7 @@
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
+    "@types/jsonwebtoken": "8.5.6",
     "@types/module-alias": "2.0.1",
     "@types/uuid": "8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.9.0",
