--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
+    "big.js": "6.1.1",
     "class-transformer": "0.5.1",
     "cors": "2.8.5",
     "express": "4.17.2",
@@ -38,6 +39,7 @@
     "@babel/preset-env": "7.10.4",
     "@babel/preset-typescript": "7.10.4",
     "@types/bcryptjs": "2.4.2",
+    "@types/big.js": "6.1.2",
     "@types/cors": "2.8.12",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.0",
