Added celebrate and removed yup

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcryptjs": "2.4.3",
     "big.js": "6.1.1",
+    "celebrate": "15.0.0",
     "class-transformer": "0.5.1",
     "cors": "2.8.5",
     "express": "4.17.2",
@@ -28,8 +29,7 @@
     "reflect-metadata": "0.1.13",
     "ts-node-dev": "1.1.8",
     "tsyringe": "4.6.0",
-    "typeorm": "0.2.41",
-    "yup": "0.32.11"
+    "typeorm": "0.2.41"
   },
   "devDependencies": {
     "@babel/cli": "7.10.4",
